# Multi-Target-Tracking

./: CMakeLists.txt  README.md  config.txt  mainMulti.cpp
CMAKE_HELPERS/: FindDATAPROXIES.cmake
Det/: detectionreader.h  detectionreaderwithID.h  facenode.cpp  facenode.h  resultwriter.cpp  resultwriter.h  skinnode.cpp  skinnode.h  upperbodynode.cpp  upperbodynode.h
src/: Config.cpp  Config.h  Features.cpp  Features.h  GraphUtils.cpp  HaarFeature.cpp  HaarFeature.h  HaarFeatures.cpp  HaarFeatures.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.cpp  MultiFeatures.h  RawFeatures.cpp  RawFeatures.h  Rect.h  Sample.h  Sampler.cpp  Sampler.h  assignmentoptimal.cpp  assignmentoptimal.h  logging.h  manager.cpp  manager.h  sort.h  utilityfun.h
